# SudokuSolver

./: .gitignore  README.md  build_backend.sh
backend/: CMakeLists.txt  build.sh  main.cc  socket.cc  socket.h
frontend/SudokuClient/: Program.cs
proto/: sudoku_solver.proto
